--- a/selectores.html
+++ b/selectores.html
@@ -12,6 +12,7 @@
             background-position: center;
             background-attachment: fixed; */
             background: #fff url(imagenes/logo.png) no-repeat center fixed ;
+            background-size: 100%;
         }
         /* .miParrafo{
             color: aqua;
