--- a/posionamiento-relativo.html
+++ b/posionamiento-relativo.html
@@ -15,10 +15,10 @@
         }
         .azul {
             background-color: blue;
-            position: absolute;
-            right: 0;
+            position: relative;
+            right: 10px;
             /* left: 300px; */
-            bottom: 0;
+            bottom: 20px;
         }
         .roja {
             background-color: tomato;
@@ -27,7 +27,7 @@
             background-color: gray;
             width: 500px;
             height: 500px;
-            position: absolute;
+            position: relative;
             margin-left: 100px; 
         }
     </style>
