--- a/variables.html
+++ b/variables.html
@@ -50,8 +50,14 @@
         array.unshift("valor nuevo");
         console.log(array);
 
-        array.splice(1,2);
+        
+        array.splice(3,1);
         console.log(array);
+
+        array.splice(2,0, "Lunes")
+        console.log(array);
+
+        
     </script>
 </body>
 </html>
